--- a/Desktop/testing/index.css
+++ b/Desktop/testing/index.css
@@ -21,14 +21,24 @@
 .display {
   background-color: wheat;
   width: 100%;
-  padding: 45px 15px 15px 15px;
+  padding: 15px 15px;
   border-radius: 20px;
   font-size: 30px;
   font-weight: 900;
   text-align: right;
   min-height: 100px;
+  display: flex;
+  flex-direction: column;
+  gap:15px;
 }
+.result
+{
+  font-size: 25px;
+  font-weight: 600;
+} 
 .btn-block {
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
